[tool.poetry]
name = "marlos"  # TODO - rename src/todo_packagename and change here to reflect
version = "0.1.0"
description = "An exploration of the off-switch game in a multi-agent reinforcement-learning setting."
authors = [
    "Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>",
    "Edmund Dable-Heath <edable-heath@turing.ac.uk>",
    ] 
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
